# zecwallet-lite

./: .eslintignore  .flowconfig  .gitattributes  .gitignore  .travis.yml  LICENSE  OKtadP.json  README.md  afterSignHook.js  application.qrc  compile_commands.json  package-lock.json  package.json  silentdragon-lite.pro  tsconfig.json  zecwallet-lite.pro
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: electron.yml
app/: Root.js  Routes.js  app.global.css  app.html  companion.js  index.js  main.dev.js  menu.js  package.json  rpc.js
app/components/: Addressbook.js  AppState.js  BalanceBlocks.js  Common.module.css  Dashboard.js  LoadingScreen.css  LoadingScreen.js  LoadingScreen.module.css  PasswordModal.js  Receive.js  Receive.module.css  ScrollPane.js  Send.css  Send.js  ServerSelectModal.js  Sidebar.js  Transactions.js  WormholeConnection.js  Zcashd.js
app/constants/: routes.json
app/grpc/: compact_formats_pb.js  service_grpc_web_pb.js  service_pb.js
app/utils/: AddressbookImpl.js  uris.js  uris.test.js  utils.js
app/wasm/: Cargo.toml  build.rs  wasmbridge.js
app/wasm/proto/: service.proto
app/wasm/src/: commands.rs  grpcconnector.rs  lib.rs  lightclient.rs  lightwallet.rs
app/wasm/src/lightclient/: checkpoints.rs
app/wasm/src/lightwallet/: address.rs  data.rs  extended_key.rs  prover.rs  tests.rs  utils.rs
app/wasm/src/proto/: compact_formats.rs  mod.rs  service.rs
app/wasm/zcash-params/: sapling-output.params
config/: env.js  getHttpsConfig.js  paths.js  webpack.config.js  webpackDevServer.config.js
configs/: webpack.config.main.prod.babel.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.prod.babel.js
envoy/: Dockerfile  envoy.yaml
internals/: NativeLoader.js
internals/scripts/: NativeLoader.js
lib/: Cargo.toml  Makefile  silentdragonlitelib.h  zecwalletlitelib.h
lib/src/: lib.rs
native/: Cargo.toml
native/src/: lib.rs
proto/: service.proto
public/: electron.js  index.html  manifest.json  preload.js
res/: Info.plist  SIGNATURES_README  logo.icns  zec_qt_wallet_de.qm  zec_qt_wallet_de.ts  zec_qt_wallet_es.ts  zec_qt_wallet_fr.qm  zec_qt_wallet_fr.ts  zec_qt_wallet_it.qm  zec_qt_wallet_it.ts  zec_qt_wallet_pot.ts  zec_qt_wallet_pt.qm  zec_qt_wallet_pt.ts  zec_qt_wallet_template.qm  zec_qt_wallet_template.ts  zec_qt_wallet_tr.qm  zec_qt_wallet_tr.ts  zec_qt_wallet_zh.qm  zec_qt_wallet_zh.ts  zecwallet.xpm
res/libsodium/: buildlibsodium.sh
resources/: icon.icns
scripts/: build.js  start.js  test.js
src/: App.test.tsx  App.tsx  Root.tsx  Routes.tsx  about.ui  addressbook.cpp  addresscombo.cpp  addresscombo.h  balancestablemodel.cpp  balancestablemodel.h  camount.cpp  camount.h  confirm.ui  connection.cpp  connection.h  connection.ui  controller.cpp  controller.h  createhushconfdialog.ui  createzcashconfdialog.ui  datamodel.cpp  datamodel.h  encryption.ui  firsttimewizard.cpp  firsttimewizard.h  index.css  index.tsx  liteinterface.cpp  liteinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  migration.ui  mobileappconnector.ui  native.node.d.ts  newseed.ui  newwallet.ui  precompiled.h  privkey.ui  (+17 more)
src/components/: Addressbook.tsx  AppState.ts  BalanceBlocks.tsx  Common.module.css  Dashboard.module.css  Dashboard.tsx  ErrorModal.tsx  LoadingScreen.tsx  PasswordModal.tsx  Receive.tsx  ScrollPane.tsx  Send.tsx  ServerSelectModal.tsx  Sidebar.tsx  Transactions.tsx  WalletSettingsModal.tsx  Zcashd.tsx
src/constants/: routes.json
src/scripts/: control  desktopentry  dobuild.ps1  dotranslations.sh  dounifiedbuild.ps1  mkmacdmg.sh  mkrelease.sh  mkwininstaller.ps1  signbinaries.sh  zec-qt-wallet.wxs
src/utils/: AddressbookImpl.ts  uris.test.js  uris.ts  utils.ts
