[package]
name = "qtlib"
version = "0.1.0"
authors = ["ZecWallet"]
edition = "2018"

[lib]
name = "zecwalletlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
zecwalletlitelib = { git = "https://github.com/adityapk00/zecwallet-light-cli", rev = "14fe907cf69d1c2ef01ce70fab895e56fa269b94" }
