[package]
name = "litelib"
version = "0.1.0"
authors = ["Aditya Kulkarni <adityapk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version = "0.2", features = ["std"]}
wasm-bindgen-futures = "0.4.9"
js-sys = "0.3.36"
tokio = "0.2"
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
base58 = "0.1.0"
log = "0.4"
dirs = "2.0.2"
http = "0.2"
hex = "0.3"
protobuf = "2"
byteorder = "1"
json = "0.12.0"
tiny-bip39 = "0.6.2"
sha2 = "0.8.0"
ripemd160 = "0.8.0"
lazy_static = "1.2.0"
rust-embed = { version = "5.1.0", features = ["debug-embed"] }
ring = "0.16.9"
libsecp256k1 = "0.3.5"
bytes = "0.4"
prost = "0.6"
prost-types = "0.6"
webpki = "0.21.0"
webpki-roots = "0.18.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.bellman]
git = "https://github.com/adityapk00/librustzcash.git"
rev = "367793904b432dd25b3a1d8d4b813ecf56022e90"
default-features = false
features = ["groth16"]

[dependencies.pairing]
git = "https://github.com/adityapk00/librustzcash.git"
rev = "367793904b432dd25b3a1d8d4b813ecf56022e90"

[dependencies.zcash_client_backend]
git = "https://github.com/adityapk00/librustzcash.git"
rev = "367793904b432dd25b3a1d8d4b813ecf56022e90"
default-features = false

[dependencies.zcash_primitives]
git = "https://github.com/adityapk00/librustzcash.git"
rev = "367793904b432dd25b3a1d8d4b813ecf56022e90"
default-features = false
features = ["transparent-inputs"]

[dependencies.zcash_proofs]
git = "https://github.com/adityapk00/librustzcash.git"
rev = "367793904b432dd25b3a1d8d4b813ecf56022e90"
default-features = false

[dependencies.ff]
git = "https://github.com/adityapk00/librustzcash.git"
rev = "367793904b432dd25b3a1d8d4b813ecf56022e90"
features = ["ff_derive"]


[dev-dependencies]
wasm-bindgen-test = "0.2"
tempdir = "0.3.7"
rand = "0.7.2"

[build-dependencies]
protobuf-codegen-pure = "2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
